# another-keyboard-layer

./: .gitignore  .gitmodules  AKL.sln  Manpage.adoc  README.adoc  build-documentation.py  build-documentation.sh  clean-output.py  clean-output.sh  default-config.toml  gen-docs.Dockerfile  global.json  release-helper.sh
AKL.Cli/: AKL.Cli.csproj
AKL.Cli/src/: Application.cs  ApplicationBuilder.cs  ColorPrinter.cs  ConsoleWindowHider.cs  Program.cs
AKL.Common/: AKL.Common.csproj  default-config.toml
AKL.Common.Tests/: AKL.Common.Tests.csproj
AKL.Common.Tests/src/: AklConfigurationTests.cs  KeyTests.cs  SampleTest.cs
AKL.Common/src/: AklConfiguration.cs  AklConfigurationProvider.cs  Autostart.cs  ConsoleWindowHider.cs  Doubler.cs  Key.cs  KeyCombination.cs  SingleInstanceChecker.cs  Tripler.cs  VirtualLayer.cs
AKL.Common/src/Util/: Autostart.cs  ConsoleWindowHider.cs  SingleInstanceChecker.cs
AKL.Gui/: AKL.Gui.csproj  akl-gui.manifest
AKL.Gui/src/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  Program.cs
AKL.Shared/: Class1.cs
AKL.Shared/src/: Doubler.cs  Tripler.cs
akl-core-system-lib/: Cargo.toml  build.rs  debug-server.rs
akl-core-system-lib/src/: event.rs  ffi.rs  key.rs  lib.rs
akl-core-system-lib/src/handle/: linux.rs  mod.rs  windows.rs
akl-core-system-lib/src/keyboard_hook/: mod.rs
akl-core-system-lib/src/keyboard_hook/linux/: mod.rs
akl-core-system-lib/src/keyboard_hook/windows/: mod.rs  translation.rs
akl-native-lib-prototype/: Cargo.toml  build.rs
akl-native-lib-prototype/.cargo/: config.toml
akl-native-lib-prototype/src/: events.rs  linux_main.rs  main.rs  send_input.rs  translated_character_hook.rs  translation.rs
akl-native-lib-prototype/src/debugger/: client.rs  mod.rs  server.rs
