[package]
name = "akl-core-system-lib"
edition = "2021"
# This package is private and shouldn't be used on its own so setting a version
# doesn't make any sense but the `version` field is required in cargo.
# This is a workaround to this issue: https://github.com/rust-lang/cargo/issues/9829
version = "0.0.0"
publish = false

[[bin]]
name = "debug-server"
path = "debug-server.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.44"
num_enum = "0.7.0"
log = { version = "0.4.20", features = ["release_max_level_off"] }
simplelog = { version = "0.12.1", default-features = false, features = ["local-offset"] }
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_Threading",
] }

[build-dependencies]
csbindgen = "1.7.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
