[package]
name = "akl-native-lib-prototype"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug-server"
path = "src/debugger/server.rs"

[dependencies]
argh = "0.1.12"
log = { version = "0.4.20" }
simplelog = { version = "0.12.1", default-features = false, features = ["local-offset"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(not(windows))'.dependencies]
x11rb = "0.12.0"
xkeysym = "0.2.0"

[profile.release]
strip = true
