[package]
name = "akl-native-lib-prototype"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug-server"
path = "src/debugger/server.rs"

[lib]
name = "akl_translated_character_hook"
path = "src/translated_character_hook.rs"
crate-type = ["cdylib"]

# "Win32_System_Console" is the only feature that is exclusively for debugging
# functionallity and should be removed when porting the prototyp into the actual
# akl-core-system-lib.
[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
] }
