[package]
name = "akl-native-lib-prototype"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug-server"
path = "src/debugger/server.rs"

[dependencies]
argh = "0.1.12"
log = { version = "0.4.20" }
simplelog = { version = "0.12.1", default-features = false, features = ["local-offset"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(not(windows))'.dependencies]
x11rb = { version = "0.12.0", features = ["allow-unsafe-code", "xkb", "dl-libxcb"] }
xkbcommon = { version = "0.6", features = ["x11"] }
libxdo = "0.6.0"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["""
apt-get update && apt-get install --assume-yes \
    libx11-dev \
    libxinerama-dev \
    libxtst-dev \
    libxkbcommon-dev \
    libxkbcommon-x11-dev
"""]

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.27"

[profile.release]
strip = true
